Remove emitPRessed hack

This on qt6 didn't work at all anymore, as passing the declarative mouse
event as a QObject couldn't work anymore.

however on qt6 it works invoking onPressed() from qml (rather than
pressed which is shadowed) which didn't on Qt5

BUG:477426